--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dicio-br",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Um pacote para pegar definições do Dicio",
   "main": "dist/index.js",
   "scripts": {
@@ -16,9 +16,9 @@
   "author": "Leonardo Bagi",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "desacentuador": "^1.0.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leonardobagi/dicio-br.git"
